# Futuristic-Emerald-Isle

./: .gitignore  CMakeLists.txt
futuristic_emerald_isle/: main.cpp
futuristic_emerald_isle/misc/: Camera.cpp  Renderer.cpp  Scene.cpp  generated_tree.cpp  loaded_tree.cpp
futuristic_emerald_isle/render/: axys_xyz.cpp  bird.cpp  bird.h  birds.cpp  birds.h  building.cpp  building.h  car.cpp  car.h  cars.cpp  cars.h  city.cpp  city.h  forest.cpp  forest.h  skybox.cpp  skybox.h  terrain.cpp  tree.cpp  tree.h
futuristic_emerald_isle/scene/: scene.cpp  scene.h
futuristic_emerald_isle/shaders/: box.frag  box.vert  car.frag  skybox.frag  skybox.vert  terrain.vert
futuristic_emerald_isle/shaders/tree_lod1/: tree.frag
futuristic_emerald_isle/shaders/tree_lod2/: tree.vert
futuristic_emerald_isle/utils/: camera.h  init_glfw_glad.cpp  light_cube.cpp  utils.h
lab2/: lab2_building.cpp  lab2_skybox.cpp  lab2_skybox_old.cpp  skybox.frag  skybox.vert
lab2/misc/: Camera.h  Renderer.h  Scene.h  generated_tree.h  loaded_tree.h  main.cpp
lab2/render/: axys_xyz.h  building.cpp  building.h  car.cpp  car.h  cars.cpp  cars.h  city.cpp  city.h  forest.cpp  forest.h  renderable_object.cpp  renderable_object.h  shader.cpp  skybox.cpp  skybox.h  terrain.cpp  terrain.h  tree.cpp  tree.h
lab2/scene/: scene.cpp  scene.h
lab2/shaders/: axis.vert  box.frag  box.vert  car.vert  terrain.frag  tree.frag  tree.vert
lab2/utils/: camera.cpp  camera.h  init_glfw_glad.h  light_cube.cpp  load_textures.cpp  load_textures.h  utils.cpp  utils.h
